tests/typechecker/should_pass/dot_function_arguments.csp
datatype A = X.Int | Y

f(g) = 
    let
        a = (X.0) == g(X.0)
    within X.0

test = f(\ x @ Y)
