tests/typechecker/should_fail/empty_dot_sequence.csp
datatype T = A.Int

f(x.y.z) = (x,y,z)

x = f(A.1.A)
